Fixed button height and footer alignment for mobile

--- a/styleMain.css
+++ b/styleMain.css
@@ -125,7 +125,7 @@ a.no-underline {
     text-align: center;
     font-size: 40px;
     text-transform: uppercase;
-    padding-left: 155px;
+    padding-left: 173px;
 }
 
 .myCard {
@@ -190,7 +190,7 @@ a.no-underline {
     box-shadow: 0 0 0.3rem #500000;
     border: 1px solid;
     position: absolute;
-    height: 8vh;
+    height: 60px;
     width: 20vw;
     color: #ff5400;
     background-color: #fff1c0;
@@ -198,6 +198,9 @@ a.no-underline {
     text-align: center;
     font-size: 30px;
     left: 185px;
+    margin-top: 4rem;
+    padding-top: 1rem;
+    margin-left: 10rem;
 }
 
 .button-card:active {
